--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-scripts": "4.0.3"
   },
   "scripts": {
-    "start": "NODE_OPTIONS=--openssl-legacy-provider node app.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
